# snakecharmer

./: .gitignore  CONTRIBUTING.md  CRACKING-MICE-GUIDE.md  Cargo.toml  NOTICE  README.md  build.rs
.github/PULL_REQUEST_TEMPLATE/: add-device.md
.github/workflows/: ci.yml
crates/platform/: Cargo.toml  build.rs  comctl32-v6.manifest
crates/platform/examples/: hook_smoke.rs  settings_smoke.rs
crates/platform/src/: autostart.rs  diagram.rs  icon.rs  lib.rs  mouse_hook.rs  settings.rs  tray.rs
crates/razer-hid/: Cargo.toml
crates/razer-hid/examples/: m1.rs
crates/razer-hid/src/: lib.rs
crates/razer-proto/: Cargo.toml
crates/razer-proto/src/: diagram.rs  lib.rs
crates/razer-proto/src/devices/: deathadder_elite.rs  deathadder_v3.rs  mod.rs
docs/: ALTERNATIVES.md  DRAWING-MICE-GUIDE.md  SPEC.md  SUPPORTED-DEVICES.md  how-deep-could-you-go.md
reference/: PYTHON-README.md  dpi_button_daemon.py  razer_common.py  set_device_mode.py  set_dpi.py
scripts/: install-autostart.ps1  uninstall-autostart.ps1
src/: actions.rs  config.rs  daemon.rs  health.rs  lib.rs  lighting.rs  logger.rs  main.rs
tools/: diagram-editor.html
