[workspace]
members = ["crates/razer-proto", "crates/razer-hid", "crates/platform"]

[workspace.package]
edition = "2021"
license = "GPL-2.0-or-later"
authors = ["asa"]
rust-version = "1.97"

[package]
name = "snakecharmer"
version = "0.1.0"
edition = "2021"
description = "Native Windows replacement for Razer Synapse, scoped to the DeathAdder Elite"
default-run = "snakecharmer"

# The daemon binary: DPI/lighting/remap + tray, talking to the real mouse.
[[bin]]
name = "snakecharmer"
path = "src/main.rs"

[dependencies]
razer-proto = { path = "crates/razer-proto" }
razer-hid = { path = "crates/razer-hid" }
platform = { path = "crates/platform" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Footprint-focused release profile (SPEC target: static exe <= 2 MB).
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
