[workspace]
members = ["crates/razer-proto", "crates/razer-hid", "crates/platform"]

[workspace.package]
edition = "2021"
license = "GPL-2.0-or-later"
authors = ["asa"]
rust-version = "1.97"
repository = "https://github.com/asavs/snakecharmer"

[package]
name = "snakecharmer"
version = "0.7.1"
edition = "2021"
description = "A tiny native Windows replacement for Razer Synapse, with a toolkit to crack your own peripherals"
repository = "https://github.com/asavs/snakecharmer"
default-run = "snakecharmer"

# The daemon binary: DPI/lighting/remap + tray, talking to the real mouse.
[[bin]]
name = "snakecharmer"
path = "src/main.rs"

[dependencies]
razer-proto = { path = "crates/razer-proto" }
razer-hid = { path = "crates/razer-hid" }
platform = { path = "crates/platform" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"

# Footprint-focused release profile (SPEC target: static exe <= 2 MB).
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
