[package]
name = "platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Isolated Windows FFI for Anti-Synapse: keystroke injection (SendInput) and single-instance guard. All unsafe lives here."

[dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
] }
