[package]
name = "platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Isolated Windows FFI for Snakecharmer: keystroke injection (SendInput) and single-instance guard. All unsafe lives here."

[dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_Graphics_Dwm",
    "Win32_System_Registry",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
] }
