[package]
name = "razer-hid"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Device access for the Razer DeathAdder Elite: open the control collection, send feature reports, read responses."

[dependencies]
razer-proto = { path = "../razer-proto" }
hidapi = "2"

[[example]]
name = "m1"
path = "examples/m1.rs"
