[package]
name = "razer-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pure Razer HID protocol for the DeathAdder Elite (report builder, CRC, device-mode and DPI commands). No I/O."

[dependencies]

[lints.rust]
unsafe_code = "forbid"
